# grand-things

./: .gitignore  DEPLOYMENT.md  Dockerfile  VERCEL_DEPLOYMENT.md  VERCEL_READY.md  docker-compose.dev.yml  docker-compose.yml  start-dev.sh  start.sh
backend/: .env.dev  BACKEND_RAILWAY_READY.md  DEVELOPMENT_GUIDE.md  RAILWAY_DEPLOYMENT.md  check-env.py  docker-compose.yml  init_db.py  main.py  pyproject.toml  railway-env.example  railway.toml  requirements.txt
backend/app/: database.py  main.py
backend/app/api/: events.py
backend/app/core/: dependencies.py
backend/db_init/: 01_init_extensions.sql
deploy/: deploy.sh  env.example  nginx.conf  supervisord.conf
frontend/: .vercelignore  VERCEL_DEPLOYMENT.md  env.example  package-lock.json  package.json  vercel-env.example  vercel.json  vite.config.js
frontend/scripts/: check-env.js  deploy-check.js
frontend/src/api/: auth.js  events.js
frontend/src/composables/: useTheme.js
frontend/src/config/: api.js
frontend/src/router/: index.js
frontend/src/style/: index.scss
frontend/src/views/: AddEventPage.vue  EventDetailPage.vue  HomePage.vue  LoginPage.vue  SearchPage.vue  StatisticsPage.vue  TimelinePage.vue
