[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "cryptography>=41.0.0",
    "email-validator>=2.0.0",
    "fastapi>=0.104.0",
    "jieba>=0.42.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[all,email]>=2.6.0",
    "pyjwt>=2.8.0",
    "python-dateutil>=2.8.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.24.0",
]
