[project]
name = "grand-things-backend"
version = "0.1.0"
description = "Grand Things 大事记应用后端 - 现代化的事件管理平台"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastAPI 核心依赖
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic[email]>=2.6.0",
    "python-multipart>=0.0.6",
    
    # 数据库相关依赖
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",
    
    # 业务逻辑依赖
    "jieba>=0.42.0",
    "python-dateutil>=2.8.0",
    
    # 微信公众号内容提取依赖
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    
    # 用户认证相关依赖
    "bcrypt>=4.0.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.uv]
# uv 特定配置
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
